@@ -28,7 +28,7 @@ define,    0x5BE820,	0x5CD420,	0x5BE530,	"Unit_get_defense_strength",			"int (__
 inlead,    0x5BB650,	0x5CA190,	0x5BB360,	"Unit_is_visible_to_civ",			"char (__fastcall *) (Unit * this, int edx, int civ_id, int param_2)"
 define,    0x5EA6C0,	0x5F9F10,	0x5EA5F0,	"Tile_has_city",				"char (__fastcall *) (Tile * this)"
 define,    0x5BE5B0,	0x5CD180,	0x5BE2C0,	"Unit_get_max_hp",				"int (__fastcall *) (Unit * this)"
-define,    0x5E4EF0,	0x5F4750,	0x5E4E20,	"UnitType_has_ability",				"char (__fastcall *) (UnitType * this, int edx, enum UnitTypeAbilities a)"
+define,    0x5E4EF0,	0x5F4750,	0x5E4E20,	"UnitType_has_ability",				"bool (__fastcall *) (UnitType * this, int edx, enum UnitTypeAbilities a)"
 define,    0x5BE470,	0x5CD030,	0x5BE180,	"Unit_get_max_move_points",			"int (__fastcall *) (Unit * this)"
 define,    0x60B370,	0x625850,	0x60B290,	"Button_set_tooltip",				"int (__fastcall *) (Button * this, int edx, char * str)"
 define,    0x5FC420,	0x60FC10,	0x5FC300,	"PCX_Image_construct",				"PCX_Image * (__fastcall *) (PCX_Image * this)"
@@ -573,6 +573,9 @@ repl call, 0x5B483F,	0x5C3199,	0x5B454F,	"Unit_despawn_after_killed_by_nuke",		"
 repl call, 0x5B4832,	0x5C318C,	0x5B4542,	"mp_despawn_after_killed_by_nuke",		""
 define,	   0x4B3290,	0x4BA210,	0x4B3320,	"City_has_unprotected_improv",			"bool (__fastcall *) (City * this, int edx, int id)"
 repl call, 0x422BE5,	0x4241A5,	0x422C65,	"City_has_unprotected_improv_to_sell",		""
+repl call, 0x5BB966,	0x5CA4B6,	0x5BB676,	"UnitType_has_detector_ability_for_vis_check",	""
+repl call, 0x5BB938,	0x5CA47F,	0x5BB648,	"UnitType_has_detector_ability_for_vis_check",	""
+repl call, 0x0FF,	0x5CA49B,	0x0FF,		"UnitType_has_detector_ability_for_vis_check",	""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
