@@ -585,3 +585,6 @@ chance_for_nukes_to_destroy_max_one_hp_units = 100
 ; Allows you to sell aqueducts and hospitals as well as any modded buildings that uncap population growth. A city must be below the pop cap for a sale
 ; to be allowed, i.e., under the standard rules, aqueducts may only be sold in cities of pop <= 6 and for hospitals pop <= 12.
 allow_sale_of_aqueducts_and_hospitals = true
+
+; This option makes it so that only sea units with the "detect invisible" ability can reveal invisible sea units, and likewise for non-sea units.
+no_cross_shore_detection = false
